--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-spring.application.name=ClientsBackend
+spring.application.name=Dungeon_And_Dilemmas
 spring.liquibase.enabled=true
-spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
+spring.liquibase.change-log=classpath:db.changelog/db.changelog-master.xml
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/Dungeon_And_Dilemmas
 spring.datasource.username=postgres
-spring.datasource.password=123
+spring.datasource.password=12345
 spring.datasource.driver-class-name=org.postgresql.Driver
